--- a/styles.css
+++ b/styles.css
@@ -1,51 +1,57 @@
+/* Lynn Owen
+Dragon - Assignment */
+
 body {
-    background-color: darkblue;
-  }
-  
-  #text {
-    background-color: black;
-    color: white;
-    padding: 10px;
-    font-size: 20pt;
-  }
-  
-  #game {
-    max-width: 900px;
-    max-height: auto;
-    background-color: white;
-    color: white;
-    margin: 30px auto 0px;
-    padding: 10px;
-    font-size: 20pt;
-  }
-  
-  #controls,
-  #stats {
-    border: 1px solid black;
-    padding: 5px;
-    color: black;
-    font-size: 20pt;
-    text-align: center;
-  }
-  
-  #monsterStats {
-    display: none;
-    border: 1px solid black;
-    padding: 5px;
-    color: white;
-    background-color: red;
-    font-size: 20pt;
-  }
-  
-  .stat {
-    padding-right: 10px;
-    font-size: 20pt;
-  }
-  
-  button {
-    cursor: pointer;
-    color: black;
-    background-color: yellow;
-    border: 3px solid black;
-    font-size: 20pt;
-  }
+  background-color: darkgray;
+}
+
+#game {
+  max-width: 900px;
+  max-height: auto;
+  background-color: white;
+  color: white;
+  margin: 30px auto 0px auto;
+  padding: 10px;
+  font-size: 20pt;
+}
+
+#stats,
+#controls {
+  border: 3px solid black;
+  border-radius: 10px;
+  padding: 10px;
+  color: black;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.stat {
+  padding-right: 10px;
+}
+
+button {
+  cursor: pointer;
+  color: black;
+  background-color: yellow;
+  border: 3px solid black;
+  font-size: 20pt;
+}
+
+#monsterStats {
+  display: none;
+  border: 3px solid black;
+  border-radius: 10px;
+  padding: 5px;
+  color: black;
+  font-weight: bold;
+  background-color: red;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+#text {
+  background-color: black;
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+}
